--- a/setings.html
+++ b/setings.html
@@ -210,7 +210,7 @@
                         </div>
                         <div class="widget-control-line d-flex fs-18">
                             <input id="tree" checked class="w-fit" type="checkbox" >
-                            <label class="p-l-30" for="one">Tickets Statistics</label>
+                            <label class="p-l-30" for="three">Tickets Statistics</label>
                         </div>
                         <div class="widget-control-line d-flex fs-18">
                             <input id="four" checked class="w-fit" type="checkbox" >
