--- a/friends.html
+++ b/friends.html
@@ -123,8 +123,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 02/10/2002</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -156,8 +156,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 11/20/2020</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -189,8 +189,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 02/12/2020</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -222,8 +222,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 07/03/2002</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -255,8 +255,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 09/10/2022</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -288,8 +288,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 10/20/2002</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -321,8 +321,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 02/1/2002</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -355,8 +355,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 02/11/2002</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -389,8 +389,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 01/09/2022</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -422,8 +422,8 @@
                     <div class="join-date between-flex p-t-20">
                         <p>Joined 11/10/2018</p>
                         <div class="d-flex  gap-5  ">
-                            <a class="btn-shape" href="profile.html">Profile</a>
-                            <a class="btn-shape-ncolor bg-th c-m-a4" href="#">Remove</a>
+                            <a class="btn-shape" href="">Profile</a>
+                            <a class="btn-shape-ncolor bg-th c-m-a4" href="">Remove</a>
                         </div>
                     </div>
                 </div>
