--- a/setings.html
+++ b/setings.html
@@ -209,7 +209,7 @@
                             <label class="p-l-30" for="two">Yearly Targets</label>
                         </div>
                         <div class="widget-control-line d-flex fs-18">
-                            <input id="tree" checked class="w-fit" type="checkbox" >
+                            <input id="three" checked class="w-fit" type="checkbox" >
                             <label class="p-l-30" for="three">Tickets Statistics</label>
                         </div>
                         <div class="widget-control-line d-flex fs-18">
